--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -311,7 +311,7 @@ Auf der Unterseite \textit{Seat Reclining} stehen folgende zwei Sonderfilter zur
 \end{figure}
 
 \section{Aufteilung}
-Link zum GitHub Repository: \newline
+Link zum GitHub Repository zur genauen Einsicht in Commits: \newline
 \href{https://github.com/RiaRentnueg/IV_SoSe18_flying-etiquette}{https://github.com/RiaRentnueg/IV\_SoSe18\_flying-etiquette}
 \linebreak \newline
 \definecolor{lightgray}{rgb}{0.93, 0.93, 0.93}
@@ -323,33 +323,39 @@ Softwarekomponenten & Kevin & Lydia & Maximiliane \\
 \endhead
 Initiale Dateien anlegen (Grundstuktur)& & & x \\
 Verantwortlich Bubblediagramme & & x & x \\
+CSV aufräumen & & & x \\
+Impressum & & & x\\
+About & & & x\\
+Navigationsleiste & & & x\\
+Logo & & & x \\
+Favicon & & & x \\
 Verantwortlich Startdiagramm & x & & \\
 Startdiagramm-Konzept testen und umsetzen & x & & \\
 Kompletter Code für StartDiagramManager & x & & \\
 Kompletter Code für StartDiagramController & x & & \\
 Kompletter Code für StartDiagramModel & x & & \\
-Kleinere Anpassungen an der css- sowie index-Datei & x & & \\
+Kleinere Anpassungen an der css- sowie index-Datei für das Startdiagramm & x & & \\
 Visuelle Darstellung des Startdiagramms auf der Startseite & x & & \\
-Impressum & & & x\\
-Navigationsleiste & & & x\\
+Dokumentation Startdiagram & & x & x\\
+Verantwortlich Bubblediagramme & & x & x \\
 Bubble Diagramme Grundlagen & & x & \\
 Filter Grundlagen & & & x \\
-CSV aufräumen & & & x \\
+Filter Funktionalität & & & x \\
+Erklärung zu den Filtern beim Hovern & & & x \\
+Gender-Filter nur ein Geschlecht gleichzeitig auswählbar & & x & \\
+MVC Struktur für Bubblediagramm & & x & \\
 Bubblediagramm responsiv & & x & \\
-Filter auswählbar & & & x \\
-MVC Struktur für Bubblediagramm js Dateien & & x & \\
-Erklärung zu den Filtern & & & x \\
-Styling Navigationsleiste & & & x \\
 Styling Bubblediagramm Überschrift & & & x \\
+Bubblediagramm Bubble Farben & & x & \\
 Bubblediagramm Animation & & x & \\
 Proporionales Schrumpfen der Bubblediagramme & & x & \\
 Hinzufügen zusätzlicher Bubblediagramme zu einer Seite & & x & \\
-Gender-Filter nur ein Geschlecht gleichzeitig auswählbar & & x & \\
-Bubblediagramm Bubble Farben & & x & \\
-Legende (wurde wieder verworfen) & & & x \\
-Text zu Bubbles hinzufügen & & x & x \\
-Bubble Text richtig positionieren & & x & x \\
 Bubblediagramme zu restlichen Unterseiten hinzufügen & & x & \\
+Text (Fragen) zu Bubbles hinzufügen und verbinden & & x & x \\
+Text (Fragen) richtig positionieren & & x & x \\
+Legende (wurde wieder verworfen) & & & x \\
+Zahleninformation auf den Bubbles beim Hovern & & & x\\
+Dokumentation Bubblediagramme & & x & x\\
 
 
 
