fix worng entries

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -322,7 +322,6 @@ Softwarekomponenten & Kevin & Lydia & Maximiliane \\
 \hline
 \endhead
 Initiale Dateien anlegen (Grundstuktur)& & & x \\
-Verantwortlich Bubblediagramme & & x & x \\
 CSV aufräumen & & & x \\
 Impressum & & & x\\
 About & & & x\\
@@ -336,7 +335,7 @@ Kompletter Code für StartDiagramController & x & & \\
 Kompletter Code für StartDiagramModel & x & & \\
 Kleinere Anpassungen an der css- sowie index-Datei für das Startdiagramm & x & & \\
 Visuelle Darstellung des Startdiagramms auf der Startseite & x & & \\
-Dokumentation Startdiagram & & x & x\\
+Dokumentation Startdiagram & x & & \\
 Verantwortlich Bubblediagramme & & x & x \\
 Bubble Diagramme Grundlagen & & x & \\
 Filter Grundlagen & & & x \\
