add note about latex

--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -42,8 +42,7 @@
 
 \maketitle
 \newpage
-\tableofcontents
-\newpage
+
 \section{Das Projekt starten} \label{Das Projekt starten}
 Um das Projekt zu starten muss \textit{Python} installiert sein.
 \subsection{Unix}
@@ -152,7 +151,8 @@ Link zum GitHub Repository:\newline
 \linebreak \newline
 Offene \textit{Pull-Requests} wurden immer erst gemerged, wenn diese von einem anderen Projektmitglied angeschaut und akzeptiert wurden. 
 In den wöchentlichen Gruppentreffen, wurden die \textit{Tickets}
-auf die Mitglieder aufgeteilt.
+auf die Mitglieder aufgeteilt. \newline
+Die Dokumentation wurde mit \textit{LaTeX} verfasst, was ein paralleles Arbeiten am Dokument möglich machte.
 
 \section{Startdiagramm}
 Das Startdiagramm soll dem Nutzer ermöglichen, selbstständig sowie umfassend den Datensatz zu erkunden. Es besteht aus mehreren einzelnen Diagrammen, die zusammen als eine svg-Datei auf der Startseite dargestellt werden. Dadurch kann man auf einen Blick mehrere Aspekte des Datensatzes visuell abbilden. Ferner kann der Nutzer somit ohne Umwege mit einem Großteil der Daten interagieren. Der Unterschied zu den Bubble-Diagrammen auf den Unterseiten besteht darin, dass im Startdiagramm alle Aspekte des Datensatzes dargestellt werden, der Detailgrad und die Filteroptionen sind allerdings nicht in dem gleichen Ausmaß gegeben. Insgesamt besteht das Startdiagramm aus vier Segmenten (Äußerer Ring, Innerer Ring, Teilnehmer-Kreise und Info-Box), die zur besseren Übersicht in diesem Text einzeln erläutert werden. Eine statische Beschreibung über die Funktionen des Startdiagramms wurde über dem Diagramm zusätzlich eingefügt, um dem Nutzer zu erklären, welche Interaktionsmöglichkeiten er hat. Diese werden ebenfalls im Detail erläutert (Abbildung \ref{ScStartDiagram}).
