--- a/docu/Dokumentation_Flying_Etiquette.tex
+++ b/docu/Dokumentation_Flying_Etiquette.tex
@@ -42,6 +42,8 @@
 
 \maketitle
 \newpage
+\tableofcontents
+\newpage
 
 \section{Das Projekt starten} \label{Das Projekt starten}
 Um das Projekt zu starten muss \textit{Python} installiert sein.
